# zebra-indexer-proto

./: Cargo.toml  Makefile  README.md  build.rs
proto/: indexer.proto
proto/__generated__/: zebra.indexer.rpc.rs
src/: lib.rs
