[package]
name = "zebra-indexer-proto"
version = "2.4.0"
edition = "2021"
rust-version = "1.85"
description = "Rust bindings for Zebra's indexer gRPC protocol buffers"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcashme/zebra-indexer-proto"
keywords = ["zebra", "zcash", "grpc", "indexer"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
prost = "0.14"
serde = { version = "1", features = ["derive"] }
tonic = "0.14"
tonic-prost = "0.14"

[features]
default = []
# Enable to regenerate the committed bindings from proto/indexer.proto.
# Requires `protoc` to be installed on the system.
# Maintainer usage: cargo build --features regenerate
regenerate = ["dep:tonic-prost-build"]

[build-dependencies]
tonic-prost-build = { version = "0.14", optional = true }

[lib]
name = "zebra_indexer_proto"